fix webpack configuration

--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "loglevel-plugin-server",
-  "version": "1.0.0",
+  "version": "1.0.1",
   "description": "Plugin for sending logs to the remote server",
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack --config webpack.config.js"
+    "build": "webpack"
   },
   "repository": {
     "type": "git",
