--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Plugin for sending logs to the remote server",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "build": "webpack"
+    "build": "webpack",
+    "prepublish": "npm run build"
   },
   "repository": {
     "type": "git",
